--- a/styles.css
+++ b/styles.css
@@ -14,8 +14,13 @@ body {
     background-position: center;
     background-repeat: no-repeat;
     background-attachment: fixed;
+    overflow: hidden;
 
     margin: 0;
+}
+
+.text-3d {
+    perspective: 120px;
 }
 
 .time {
@@ -27,6 +32,12 @@ body {
     /* border: solid red; */
     margin-top: 40px;
     text-align: center;
+    height: 111px;
+    line-height: 111px;
+    transform-style: preserve-3d;
+    transform: rotateX(0deg);
+
+    transition: all cubic-bezier(.25,.11,.2,.99) 1000ms;
 }
 
 .tool-icon-bx {
@@ -37,7 +48,6 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-
     transition: all cubic-bezier(.25,.11,.2,.99) 200ms;
 }
 
