--- a/styles.css
+++ b/styles.css
@@ -95,3 +95,139 @@ body {
 
     transition: all cubic-bezier(.25,.11,.2,.99) 1000ms;
 }
+
+.pomodoro-base {
+    width: 273px;
+    height: 222px;
+    background-color: rgba(0, 0, 0, 0.5);
+    border-radius: 20px;
+    backdrop-filter: blur(50px);
+    border: solid 1px rgba(255, 255, 255, 0.25);
+    box-shadow: 0px 0px 0px 1px rgba(0, 0, 0, 0.25);
+}
+
+.top-icon-base {
+    width: 16px;
+    height: 16px;
+    background-color: rgba(255, 255, 255, 0.2);
+    border-radius: 800px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.top-icon {
+    width: 12px;
+    height: 12px;
+}
+
+.window-controls-sub {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: fit-content;
+    gap: 2px;
+}
+
+.window-controls {
+    position: fixed;
+    display: flex;
+    justify-content: space-between;
+    margin-top: 9px;
+    width: 255px;
+    margin-left: 9px;
+    margin-right: 9px;
+}
+
+.window-title {
+    position: fixed;
+    font-family: 'Geist';
+    font-weight: 600;
+    font-size: 0.81rem;
+    color: rgba(255, 255, 255, 0.8);
+    width: 255px;
+    text-align: center;
+    margin-top: 9px;
+    margin-left: 9px;
+    margin-right: 9px;
+}
+
+.pomo-timer {
+    font-family: 'Geist';
+    font-weight: 600;
+    color: rgba(255, 255, 255, 1);
+    font-size: 3rem;
+    position: absolute;
+    /* border: solid red; */
+    text-align: center;
+    line-height: 222px;
+    width: 273px;
+    height: 222px;
+}
+
+.pomo-play-wrapper {
+    position: absolute;
+    width: 273px;
+    height: 222px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.pomo-play {
+    width: 40px;
+    height: 40px;
+    translate: 0px 61px;
+}
+
+.pomo-mode {
+    display: flex;
+    background-color: rgba(255, 255, 255, 0.1);
+    border-radius: 800px;
+    width: fit-content;
+    gap: 2px;
+    padding: 2px;
+    justify-content: center;
+    align-items: center;
+    translate: 0px -55px;
+}
+
+.pomo-mode-item {
+    font-family: 'Geist';
+    font-weight: 600;
+    font-size: 0.63rem;
+    color: rgba(255, 255, 255, 1);
+    background-color: rgba(255, 255, 255, 0.1);
+    padding-top: 4px;
+    padding-bottom: 4px;
+    padding-left: 9px;
+    padding-right: 9px;
+    width: fit-content;
+    border-radius: 800px;
+}
+
+.pomo-mode-item:nth-child(1) {
+    color: black;
+    background-color: white;
+}
+
+.pomo-mode-wrapper {
+    position: absolute;
+    width: 273px;
+    height: 222px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.pomodoro {
+    position: absolute;
+    width: 100vw;
+    height: 65vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    scale: 0;
+
+    transition: all cubic-bezier(.25,.11,.2,.99) 200ms;
+}
