--- a/styles.css
+++ b/styles.css
@@ -145,6 +145,10 @@ body {
     margin-right: 9px;
 }
 
+#window-controls-2 {
+    width: 442px;
+}
+
 .window-title {
     position: fixed;
     font-family: 'Geist';
@@ -156,6 +160,10 @@ body {
     margin-top: 9px;
     margin-left: 9px;
     margin-right: 9px;
+}
+
+#window-title-2 {
+    width: 442px;
 }
 
 .pomo-timer {
@@ -239,4 +247,53 @@ body {
     scale: 0;
 
     transition: all cubic-bezier(.25,.11,.2,.99) 200ms;
+}
+
+.music-base {
+    width: 460px;
+    height: 365px;
+    background-color: rgba(0, 0, 0, 0.5);
+    border-radius: 20px;
+    backdrop-filter: blur(50px);
+    border: solid 1px rgba(255, 255, 255, 0.25);
+    box-shadow: 0px 0px 0px 1px rgba(0, 0, 0, 0.25);
+}
+
+.music {
+    position: absolute;
+    width: 100vw;
+    height: 65vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    scale: 1;
+
+    transition: all cubic-bezier(.25,.11,.2,.99) 200ms;
+}
+
+.video {
+    width: 442px;
+    height: 268px;
+    border-radius: 11px;
+    background-color: white;
+    border: solid 1px rgba(255, 255, 255, 0.25);
+    margin-left: 9px;
+    margin-right: 9px;
+    margin-top: 33px;
+}
+
+.linkbar {
+    width: 442px;
+    height: 46px;
+    background-color: rgba(255, 255, 255, 0.1);
+    border: solid 1px rgba(255, 255, 255, 0.25);
+    border-radius: 11px;
+    margin-top: 7px;
+    margin-left: 9px;
+    margin-right: 9px;
+}
+
+.linkbar-icon {
+    width: 24px;
+    height: 24px;
 }
