--- a/styles.css
+++ b/styles.css
@@ -266,7 +266,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    scale: 1;
+    scale: 0;
 
     transition: all cubic-bezier(.25,.11,.2,.99) 200ms;
 }
@@ -291,9 +291,24 @@ body {
     margin-top: 7px;
     margin-left: 9px;
     margin-right: 9px;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 11px;
 }
 
 .linkbar-icon {
     width: 24px;
     height: 24px;
+}
+
+.linkbar-text {
+    all: unset;
+    width: 385px;
+    height: 16px;
+    font-family: 'Geist';
+    font-size: 0.81rem;
+    font-weight: 600;
+    color: rgba(255, 255, 255, 0.8);
 }
