small visual fixes

--- a/styles.css
+++ b/styles.css
@@ -312,3 +312,11 @@ body {
     font-weight: 600;
     color: rgba(255, 255, 255, 0.8);
 }
+
+.linkbar-text::placeholder {
+    color: rgba(255, 255, 255, 0.8);
+}
+
+.linkbar-text:-ms-input-placeholder {
+    color: rgba(255, 255, 255, 0.8);
+}
