--- a/styles.css
+++ b/styles.css
@@ -145,8 +145,20 @@ body {
     margin-right: 9px;
 }
 
+#top-icon-minimize-2 {
+    background-color: rgba(0, 0, 0, 0.2);
+}
+
+#top-icon-close-2 {
+    background-color: rgba(0, 0, 0, 0.2);
+}
+
 #window-controls-2 {
     width: 442px;
+}
+
+#window-controls-3 {
+    width: 479px;
 }
 
 .window-title {
@@ -164,6 +176,11 @@ body {
 
 #window-title-2 {
     width: 442px;
+}
+
+#window-title-3 {
+    width: 410px;
+    text-align: left;
 }
 
 .pomo-timer {
@@ -326,4 +343,68 @@ body {
 
 .linkbar-text:-ms-input-placeholder {
     color: rgba(255, 255, 255, 0.8);
+}
+
+.settings-base {
+    background-color: rgba(0, 0, 0, 0.5);
+    width: 497px;
+    height: 381px;
+    background-color: rgba(0, 0, 0, 0.5);
+    border-radius: 20px;
+    backdrop-filter: blur(50px);
+    border: solid 1px rgba(255, 255, 255, 0.25);
+    box-shadow: 0px 0px 0px 1px rgba(0, 0, 0, 0.25);
+
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+}
+
+.settings-page-base {
+    background-color: white;
+    width: 344px;
+    height: 381px;
+    border-radius: 0px 20px 20px 0px;
+}
+
+.settings-menus {
+    width: 153px;
+    height: fit-content;
+    /* border: solid red; */
+    margin-top: 39px;
+}
+
+.settings-menu-item-base {
+    width: 153px;
+    height: 22px;
+    background-color: rgba(255, 255, 255, 0.00); 
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    transition: all cubic-bezier(.25,.11,.2,.99) 200ms;
+}
+
+.settings-menu-item-base:hover {
+    background-color: rgba(255, 255, 255, 0.2); 
+}
+
+.settings-menu-item-text {
+    font-family: 'Geist';
+    font-weight: 500;
+    color: white;
+    font-size: 0.69rem;
+    margin-left: 9px;
+    transition: all cubic-bezier(.25,.11,.2,.99) 200ms;
+}
+
+.settings {
+    position: absolute;
+    width: 100vw;
+    height: 65vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    scale: 1;
+
+    transition: all cubic-bezier(.25,.11,.2,.99) 200ms;
 }
